# va

./: .env.example  .env.render.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  priorities.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.md  requirements.txt  roadmap.md
.claude/agents/: bob.md  business-analyst.md  git-expert.md  product-tech-lead.md  project-manager.md  requirements-master.md  requirements-reviewer.md  tdd-coder.md
.claude/mcp-servers/agent-chat/: README.md  requirements.txt  server.py  view_chat.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 9bab40e1a6eb_initial_schema_channels_posts_.py  add_last_collected_message_id.py  b2c3d4e5f6g7_add_post_enrichment_tables.py  c3d4e5f6g7h8_add_is_media_only_column.py
devlog/: WS-5.2-database-schema-post-enrichment.md  ws-1.1-infrastructure-setup.md  ws-1.2-database-schema.md  ws-1.3-telegram-bot-foundation.md  ws-1.4-telegram-api-integration.md  ws-1.5-channel-management.md  ws-1.6-content-collection-pipeline.md  ws-10.1-search-and-health-bug-fix.md  ws-2.1-engagement-metrics.md  ws-2.2-keyword-search.md  ws-2.3-ranking-algorithm.md  ws-2.4-search-bot-commands.md  ws-2.5-export-functionality.md  ws-3.1-saved-topics.md  ws-3.2-advanced-channel-management.md  ws-3.3-polish-and-testing.md  ws-4.1-render-configuration.md  ws-4.2-production-environment.md  ws-4.3-deployment-documentation.md  ws-5.1-groq-client-integration.md  ws-5.3-enrichment-service.md  ws-5.4-celery-enrichment-tasks.md  ws-5.5-enhanced-search-service.md  ws-5.6-bot-integration-llm.md  ws-5.7-cost-tracking-monitoring.md  ws-5.8-documentation-integration-testing.md  ws-6.1-dependency-modernization.md  ws-6.10-bot-testing-documentation.md  ws-6.2-security-audit.md  ws-6.3-python-modernization.md  ws-6.4-api-database-review.md  ws-6.5-infrastructure-modernization.md  ws-6.6-documentation-refresh.md  ws-6.7-bot-implementation-audit.md  ws-6.8-bot-library-modernization.md  ws-6.9-bot-feature-enhancement.md  ws-7.1-service-dependency-injection-fix.md  ws-7.2-channel-validation-connection-fix.md  ws-7.3-search-service-injection.md  ws-7.4-search-service-async-fix.md  (+6 more)
docs/: BOTFATHER_SETUP.md  BOT_CONFIGURATION.md  BOT_TROUBLESHOOTING.md  DEPLOYMENT.md  LLM_INTEGRATION.md  USER_GUIDE.md  USER_GUIDE_RU.md  WS-5-RAG-WITHOUT-VECTORS.md  WS-5-TASK-BREAKDOWN.md
plans/: roadmap.md
plans/completed/: roadmap-archive.md
scripts/: auth_telegram.py  init-db.sql
src/tnse/: __init__.py  main.py
src/tnse/bot/: __init__.py  __main__.py  advanced_channel_handlers.py  application.py  channel_handlers.py  config.py  export_handlers.py  handlers.py  llm_handlers.py  menu.py  search_handlers.py  sync_handlers.py  topic_handlers.py
src/tnse/core/: __init__.py  celery_app.py  config.py  logging.py
src/tnse/db/: __init__.py  base.py  models.py
src/tnse/engagement/: __init__.py  service.py
src/tnse/export/: __init__.py  service.py
src/tnse/llm/: __init__.py  base.py  cost_tracker.py  enrichment_service.py  groq_client.py  tasks.py
src/tnse/pipeline/: __init__.py  collector.py  storage.py  tasks.py
src/tnse/ranking/: __init__.py  service.py
src/tnse/search/: __init__.py  service.py  tokenizer.py
src/tnse/telegram/: __init__.py  channel_service.py  client.py  rate_limiter.py
src/tnse/topics/: __init__.py  service.py  templates.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_bot_integration.py  test_llm_integration.py  test_resume_tracking_integration.py
tests/performance/: __init__.py  test_performance.py
tests/unit/: __init__.py  test_config.py  test_health.py  test_logging.py  test_models_channel.py  test_models_engagement.py  test_models_post.py  test_models_topics.py
tests/unit/api/: __init__.py  test_api_optimization.py
tests/unit/bot/: __init__.py  test_advanced_channel_handlers.py  test_application.py  test_bot_feature_enhancement.py  test_bot_implementation_audit.py  test_bot_library_modernization.py  test_bot_testing_documentation.py  test_channel_commands.py  test_channel_health_bug.py  test_config.py  test_export_handlers.py  test_handlers.py  test_llm_handlers.py  test_menu_setup.py  test_search_handlers.py  test_search_with_enrichment.py  test_service_injection.py  test_session_leak.py  test_sync_handlers.py  test_topic_handlers.py  test_topic_service_injection.py
tests/unit/db/: test_post_enrichment_migration.py  test_post_enrichment_models.py
tests/unit/dependencies/: __init__.py  test_dependency_versions.py
tests/unit/docs/: __init__.py  test_documentation_refresh.py
tests/unit/engagement/: __init__.py  test_engagement_service.py  test_storage_integration.py
tests/unit/export/: __init__.py  test_export_service.py
tests/unit/infrastructure/: __init__.py  test_infrastructure_modernization.py
tests/unit/llm/: __init__.py  test_cost_tracker.py  test_enrichment_service.py  test_groq_client.py  test_tasks.py
tests/unit/modernization/: __init__.py  test_typing_modernization.py
tests/unit/pipeline/: __init__.py  test_celery_app.py  test_collector.py  test_resume_tracking.py  test_resume_tracking_tasks.py  test_storage.py  test_tasks.py  test_tasks_wiring.py
(+17 files in other folders)
